--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <nav class="navbar bg-light ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="images/WhatsApp Image 2023-07-16 at 14.43.30.jpeg" alt="Logo" width="120" height="80"
+                    <img src="images\LogoSL.jpeg" alt="Logo" width="120" height="80"
                         class="d-inline-block align-text-top">
 
                 </a>
